--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <h1>This is my Intro to New Media page.</h1>
     <p>From this page you can access all my homework for HUW112</p>
     <ul>
-      <li><a href="wildseedportrait.html">Here is a link to my Alter Ego Potrait</a></li>
+      <li><a href="AlterEgo.html">Here is a link to my Alter Ego Potrait</a></li>
       <li><a href="pattern.html"Here is a link to my Pattern</a></li>
       <li><a href="logo.html">Here is a link to my Color Study</a></li>
       <li><a href="film.html">Here is a link to my Film</a></li>
