--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <p>This is my first webpage name here</p>
   <body>
-  <img src="virtual landscape.jpg"height="400">
+  <img src="virtual lanscape art.jpg"height="400">
   <h1>This is my Intro to New Media page.</h1>
     <p>From this page you can access all my homework for HUW112</p>
     <ul>
