--- a/pattern.html
+++ b/pattern.html
@@ -1,3 +1,3 @@
 <h1>My Illustrator Pattern </h1>
-<img src="pattern.jpg">
+<img src="pattern (2).pdf.jpg">
 <a href="index.html">Back to main page</a>
