--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <p>This is my first webpage name here</p>
+  <p> Sade Henderson</p>
   <body>
   <img src="virtual lanscape art.jpg"height="400">
   <h1>This is my Intro to New Media page.</h1>
